--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -14,6 +14,12 @@
    <string>OpenGl - Qt -Direct Mode Drawing</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="1">
+    <widget class="GLWidget" name="widget" native="true">
+     <zorder>frame</zorder>
+     <zorder>frame</zorder>
+    </widget>
+   </item>
    <item row="0" column="0">
     <widget class="QFrame" name="frame">
      <property name="sizePolicy">
@@ -40,7 +46,7 @@
         <x>10</x>
         <y>10</y>
         <width>161</width>
-        <height>177</height>
+        <height>121</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
@@ -51,16 +57,9 @@
         <enum>QLayout::SetNoConstraint</enum>
        </property>
        <item>
-        <widget class="QPushButton" name="newSquarePushButton">
-         <property name="text">
-          <string>New Square</string>
-         </property>
-        </widget>
-       </item>
-       <item>
         <widget class="QPushButton" name="newCirclePushButton">
          <property name="text">
-          <string>New Circle</string>
+          <string>New Shape</string>
          </property>
         </widget>
        </item>
@@ -81,13 +80,6 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="pressMePushButton">
-         <property name="text">
-          <string>Press Me</string>
-         </property>
-        </widget>
-       </item>
-       <item>
         <widget class="QPushButton" name="aboutPushButton">
          <property name="text">
           <string>About</string>
@@ -103,10 +95,26 @@
        </item>
       </layout>
      </widget>
+     <widget class="QSpinBox" name="sidesBox">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>140</y>
+        <width>41</width>
+        <height>24</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <number>3</number>
+      </property>
+      <property name="maximum">
+       <number>1000</number>
+      </property>
+      <property name="value">
+       <number>5</number>
+      </property>
+     </widget>
     </widget>
-   </item>
-   <item row="0" column="1">
-    <widget class="GLWidget" name="widget" native="true"/>
    </item>
   </layout>
  </widget>
@@ -119,27 +127,12 @@
    <slots>
     <slot>newSquare()</slot>
     <slot>newCircle()</slot>
+    <slot>setSides(int)</slot>
    </slots>
   </customwidget>
  </customwidgets>
  <resources/>
  <connections>
-  <connection>
-   <sender>pressMePushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>frmMain</receiver>
-   <slot>pressmebut()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>174</x>
-     <y>133</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>190</x>
-     <y>138</y>
-    </hint>
-   </hints>
-  </connection>
   <connection>
    <sender>aboutPushButton</sender>
    <signal>clicked()</signal>
@@ -147,8 +140,8 @@
    <slot>aboutBut()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>82</x>
-     <y>153</y>
+     <x>94</x>
+     <y>117</y>
     </hint>
     <hint type="destinationlabel">
      <x>190</x>
@@ -163,28 +156,12 @@
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>133</x>
-     <y>185</y>
+     <x>145</x>
+     <y>141</y>
     </hint>
     <hint type="destinationlabel">
      <x>193</x>
      <y>234</y>
-    </hint>
-   </hints>
-  </connection>
-  <connection>
-   <sender>newSquarePushButton</sender>
-   <signal>clicked()</signal>
-   <receiver>widget</receiver>
-   <slot>newSquare()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>174</x>
-     <y>27</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>202</x>
-     <y>30</y>
     </hint>
    </hints>
   </connection>
@@ -195,12 +172,28 @@
    <slot>newCircle()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>161</x>
-     <y>59</y>
+     <x>114</x>
+     <y>53</y>
     </hint>
     <hint type="destinationlabel">
-     <x>229</x>
-     <y>55</y>
+     <x>491</x>
+     <y>423</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>sidesBox</sender>
+   <signal>valueChanged(int)</signal>
+   <receiver>widget</receiver>
+   <slot>setSides(int)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>171</x>
+     <y>225</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>208</x>
+     <y>216</y>
     </hint>
    </hints>
   </connection>
