--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -14,14 +14,12 @@
    <string>OpenGl - Qt -Direct Mode Drawing</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1">
+   <item row="0" column="1">
     <widget class="GLWidget" name="widget" native="true">
-     <zorder>frame</zorder>
-     <zorder>frame</zorder>
      <zorder>frame</zorder>
     </widget>
    </item>
-   <item row="0" column="0" rowspan="2">
+   <item row="0" column="0">
     <widget class="QFrame" name="frame">
      <property name="sizePolicy">
       <sizepolicy hsizetype="Fixed" vsizetype="Preferred">
@@ -99,7 +97,7 @@
      <widget class="QSpinBox" name="sidesBox">
       <property name="geometry">
        <rect>
-        <x>10</x>
+        <x>40</x>
         <y>140</y>
         <width>71</width>
         <height>31</height>
@@ -113,6 +111,38 @@
       </property>
       <property name="value">
        <number>5</number>
+      </property>
+     </widget>
+     <widget class="QDoubleSpinBox" name="scaleSpinBox">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>180</y>
+        <width>70</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="minimum">
+       <double>0.000000000000000</double>
+      </property>
+      <property name="maximum">
+       <double>4.000000000000000</double>
+      </property>
+      <property name="singleStep">
+       <double>0.100000000000000</double>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="scaleButton">
+      <property name="geometry">
+       <rect>
+        <x>110</x>
+        <y>180</y>
+        <width>71</width>
+        <height>32</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Scale</string>
       </property>
      </widget>
      <widget class="QPushButton" name="sidesButton">
@@ -132,7 +162,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>290</y>
+        <y>350</y>
         <width>160</width>
         <height>22</height>
        </rect>
@@ -148,7 +178,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>230</y>
+        <y>290</y>
         <width>160</width>
         <height>22</height>
        </rect>
@@ -167,7 +197,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>260</y>
+        <y>320</y>
         <width>160</width>
         <height>22</height>
        </rect>
@@ -179,11 +209,11 @@
        <enum>Qt::Horizontal</enum>
       </property>
      </widget>
-     <widget class="QLabel" name="colourLabel">
+     <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>210</y>
+        <y>270</y>
         <width>62</width>
         <height>19</height>
        </rect>
@@ -192,11 +222,11 @@
        <string>Colour</string>
       </property>
      </widget>
-     <widget class="QLabel" name="bColourLabel">
+     <widget class="QLabel" name="colourLabel">
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>320</y>
+        <y>390</y>
         <width>111</width>
         <height>19</height>
        </rect>
@@ -209,7 +239,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>340</y>
+        <y>420</y>
         <width>160</width>
         <height>22</height>
        </rect>
@@ -231,7 +261,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>370</y>
+        <y>450</y>
         <width>160</width>
         <height>22</height>
        </rect>
@@ -247,7 +277,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>400</y>
+        <y>480</y>
         <width>160</width>
         <height>22</height>
        </rect>
@@ -263,7 +293,7 @@
       <property name="geometry">
        <rect>
         <x>110</x>
-        <y>170</y>
+        <y>220</y>
         <width>71</width>
         <height>32</height>
        </rect>
@@ -275,8 +305,8 @@
      <widget class="QSpinBox" name="radiusBox">
       <property name="geometry">
        <rect>
-        <x>10</x>
-        <y>170</y>
+        <x>40</x>
+        <y>220</y>
         <width>71</width>
         <height>31</height>
        </rect>
@@ -292,268 +322,6 @@
       </property>
       <property name="value">
        <number>100</number>
-      </property>
-     </widget>
-    </widget>
-   </item>
-   <item row="1" column="2">
-    <widget class="QFrame" name="frame_3">
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QFrame" name="frame_2">
-     <property name="maximumSize">
-      <size>
-       <width>574</width>
-       <height>150</height>
-      </size>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::StyledPanel</enum>
-     </property>
-     <property name="frameShadow">
-      <enum>QFrame::Raised</enum>
-     </property>
-     <widget class="QDoubleSpinBox" name="scaleSpinBox">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>10</y>
-        <width>70</width>
-        <height>31</height>
-       </rect>
-      </property>
-      <property name="minimum">
-       <double>0.000000000000000</double>
-      </property>
-      <property name="maximum">
-       <double>4.000000000000000</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QSpinBox" name="xTrans">
-      <property name="geometry">
-       <rect>
-        <x>10</x>
-        <y>80</y>
-        <width>71</width>
-        <height>31</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QSpinBox" name="yTrans">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>80</y>
-        <width>71</width>
-        <height>31</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="transButton">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>110</y>
-        <width>161</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Translate x, y</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="scaleButton">
-      <property name="geometry">
-       <rect>
-        <x>80</x>
-        <y>10</y>
-        <width>71</width>
-        <height>32</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Scale</string>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matXX">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>20</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matYX">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>50</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matZX">
-      <property name="geometry">
-       <rect>
-        <x>200</x>
-        <y>80</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matXY">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>20</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matYY">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>50</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matZY">
-      <property name="geometry">
-       <rect>
-        <x>280</x>
-        <y>80</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matXZ">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>20</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matYZ">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>50</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QDoubleSpinBox" name="matZZ">
-      <property name="geometry">
-       <rect>
-        <x>360</x>
-        <y>80</y>
-        <width>70</width>
-        <height>24</height>
-       </rect>
-      </property>
-      <property name="decimals">
-       <number>1</number>
-      </property>
-      <property name="minimum">
-       <double>-99.900000000000006</double>
-      </property>
-      <property name="singleStep">
-       <double>0.100000000000000</double>
       </property>
      </widget>
     </widget>
